...
      onPanResponderTerminate: () => swipeRef.current.terminate(),
    }),
  ).current;

  if (hasError) {
    return (
      <View style={styles.container} testID="gameScreen">
        <StatusBar style="light" />
        <GameErrorScreen
          originDomain={originDomain}
          onRetry={() => {
            setIsLoading(true);
            setHasError(false);
...
        <StatusBar style="light" />
        <Animated.View
          style={[styles.fullScreen, { transform: [{ translateX }] }]}
          {...panResponder.panHandlers}
        >
          <CastContext.StoreProvider>
            <View style={styles.webviewContainer} testID="gameWebView">
              <BridgedWebView
                bridge={bridge}
                source={{ uri }}
                style={styles.webview}
                javaScriptEnabled={true}
                domStorageEnabled={true}
...
