...

export const IDS: Record<RemoteButton, string> = {
  up: "remoteUp",
  down: "remoteDown",
  left: "remoteLeft",
  right: "remoteRight",
  ok: "remoteOk",
  back: "remoteBack",
  home: "remoteHome",
  end: "remoteEnd",
};

